# booklore-mcp

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  log.py  pyproject.toml  server.py
.gitea/workflows/: ci.yml
.github/workflows/: ci.yml
tests/: conftest.py  test_client.py  test_helpers.py  test_logging.py  test_search.py  test_tools.py
