[project]
name = "booklore-mcp"
version = "0.1.0"
description = "Local MCP server wrapping a self-hosted BookLore instance's REST API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Willian Paixão" }]
keywords = ["mcp", "booklore", "ebooks", "library", "fastmcp", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastmcp>=3.0",
    "httpx>=0.27",
    "structlog>=24.1",
]

[project.urls]
Homepage = "https://github.com/willianpaixao/booklore-mcp"
Repository = "https://github.com/willianpaixao/booklore-mcp"
Issues = "https://github.com/willianpaixao/booklore-mcp/issues"

[project.scripts]
booklore-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py", "log.py"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
files = ["server.py", "log.py"]
ignore_missing_imports = true
check_untyped_defs = true
